--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -29,11 +29,11 @@ h1 {
   margin-left: 8px;
 }
 
-.clock {
+/*.clock {
   display: inline-block;
   float: right;
   margin-right: 8px;
-}
+}*/
 
 ul {
   list-style-type: none;
@@ -126,4 +126,8 @@ h2 {
 
 a {
   text-decoration: none;
+}
+
+#timer {
+	margin-left: 83%;
 }
