JS Partial Functionality

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1,4 +1,58 @@
-/* ================  STYLE SHEET 1st DRAFT   ==================  */
+#mainBoard {
+  background: teal;
+  border:teal 2px solid;
+  border-radius: 5px;
+  width:700px;
+  height:700px;
+  padding:24px;
+  margin: auto;
+  /*vertical-align: middle;*/
+}
+
+#mainBoard > div {
+  background: cadetblue no-repeat;
+  border:#fff 3px solid;
+  width:100px;
+  height:100px;
+  border-radius: 5px;
+  float:left;
+  display: block;
+  margin:1px;
+  /*vertical-align: bottom;*/
+  /*padding: 1% 0 0 0;*/
+  /*padding-bottom: 5px;*/
+  font-size:64px;
+  /*text-align:center;*/
+  /*align-items: center;*/
+}
+
+/*.card {
+  width: 100px;
+  height: 100px;
+  background: cadetblue;
+  border-radius: 5px;
+  border-color: white;
+  border-style: solid;
+  border-width: 2px;
+  display: block;
+  transition: background 1s,
+  -webkit-transform 1s;
+}
+
+input:checked +.card {
+  background: teal;
+  -webkit-transform: rotateY(180deg);
+}
+
+input:checked +.card .flip {
+  opacity: 1;
+  transition-delay: 0.5s;
+}
+
+.flip {
+  opacity: 0;
+  margin-top: 35px;
+}*/
 
 body {
   background-color: teal;
@@ -14,19 +68,17 @@ h1 {
   font-size: 4.3em;
   font-weight: lighter;
   text-align: center;
-	margin: 0 0 20px 0;
-	padding-top: 2.5em;
+  /*margin-left: 15%;*/
+  margin: 0 0 20px 0;
+  padding-top: 2.5em;
 }
 
 .title {
   letter-spacing: 2px;
 }
 
-.heart {
-  font-size: 1em;
-  display: inline-block;
-  float: left;
-  margin-left: 8px;
+#timer {
+  margin-left: 83%;
 }
 
 /*.clock {
@@ -35,16 +87,32 @@ h1 {
   margin-right: 8px;
 }*/
 
-ul {
+
+/* ================  STYLE SHEET 1st DRAFT   ==================  */
+
+/*.heart {
+  font-size: 1em;
+  display: inline-block;
+  float: left;
+  margin-left: 8px;
+}*/
+
+/*.clock {
+  display: inline-block;
+  float: right;
+  margin-right: 8px;
+}*/
+
+/*ul {
   list-style-type: none;
   margin: 3px;
-}
+}*/
 
-ul li{
+/*ul li{
   display: inline-block;
-}
+}*/
 
-input {
+/*input {
   width: 100px;
   height: 100px;
   display: none;
@@ -76,15 +144,9 @@ input:checked +.card .flip {
 .flip {
   opacity: 0;
   margin-top: 35px;
-}
+}*/
 
 /* ================= OPENING PAGE =================== */
-
-h1 {
-  /*margin: 0 0 20px 0;*/
-  /*padding-top: 2.5em;*/
-
-}
 
 h2 {
   font-family: Arial, sans-serif;
@@ -126,8 +188,4 @@ h2 {
 
 a {
   text-decoration: none;
-}
-
-#timer {
-	margin-left: 83%;
 }
